protected login + user creation

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -22,8 +22,12 @@
             <p>Log out</p>
         </section>
     </header>
-    <main class="PW-login">
+    <main class="PW-dashboard">
+        <section class="PW-dashboard-cards">
+            <div class="PW-dashboard-card">
 
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script type="module" src="/src/js/dashboard.js"></script>
