--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                     in</span></p>
         </form>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+    <script src="/src/js/notify.js"></script>
     <script type="module" src="/src/js/login.js"></script>
 </body>
 
