encrypt passwords in database

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -68,7 +68,7 @@
         <div class="PW-dashboard-input-extended">
             <img src="/src/images/icons/key-outline.svg" alt="password">
             <P>********</P>
-            <img src="/src/images/icons/copy-outline.svg" class="PW-copy-password" alt="copy">
+            <img src="/src/images/icons/copy-outline.svg" data-pw="${data.password}" class="PW-copy-password" alt="copy">
         </div>
     </div>
     <button>Actions</button>
