--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -71,9 +71,9 @@
             <img src="/src/images/icons/copy-outline.svg" data-pw="${data.password}" class="PW-copy-password" alt="copy">
         </div>
     </div>
-    <button>Actions</button>
+    <button class="PW-actions">Actions</button>
     <div class="PW-dashboard-card-buttons PW-hide">
-        <button type="button" class="red">Delete</button>
-        <button type="button">Edit</button>
+        <button type="button PW-delete" class="red">Delete</button>
+        <button type="button PW-edit">Edit</button>
     </div>
 </article> -->
