change card template

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -73,7 +73,7 @@
     </div>
     <button class="PW-actions">Actions</button>
     <div class="PW-dashboard-card-buttons PW-hide">
-        <button type="button PW-delete" class="red">Delete</button>
-        <button type="button PW-edit">Edit</button>
+        <button type="button" class="PW-delete red">Delete</button>
+        <button type="button" class="PW-edit">Edit</button>
     </div>
 </article> -->
