--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -52,7 +52,7 @@
 </html>
 
 
-<!-- <article id="${UUID}" class="PW-dashboard-card">
+<!-- <article id="${data.id}" data-id="${UUID}" class="PW-dashboard-card">
     <div class="PW-dashboard-input">
         <img src="/src/images/icons/globe-outline.svg" alt="site">
         <h3>${data.site}</h3>
