--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -26,6 +26,9 @@
         <section id="cards" class="PW-dashboard-cards">
             <!-- Cards -->
         </section>
+        <div id="PW-add" class="PW-dashboard-card">
+            <img src="/src/images/icons/add-outline.svg" alt="add card">
+        </div>
         <section class="PW-modal">
             <form class="PW-dashboard-card" id="password_form">
                 <div class="PW-dashboard-input">
