--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -31,6 +31,7 @@
         </div>
         <section class="PW-modal">
             <form class="PW-dashboard-card" id="password_form">
+                <p class="PW-modal-close">❌</p>
                 <div class="PW-dashboard-input">
                     <img src="/src/images/icons/globe-outline.svg" alt="site">
                     <input type="text" name="site" placeholder="Site" autocomplete="off">
